[gd_scene load_steps=18 format=2]

[ext_resource path="res://Tscn/Backgrounds/grass_world.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tscn/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Tscn/Builds/house_1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Tiles/小镇元素.png" type="Texture" id=5]
[ext_resource path="res://Scripts/真新镇.gd" type="Script" id=6]
[ext_resource path="res://Tscn/House.tscn" type="PackedScene" id=7]
[ext_resource path="res://Tscn/ScenceChange.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scripts/camera.gd" type="Script" id=12]
[ext_resource path="res://Tscn/NPC.tscn" type="PackedScene" id=13]

[sub_resource type="GDScript" id=5]
script/source = "extends Node2D
"

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 12.1895, 25.8797, 0.53508, 25.8797, 0.53508, 4.17834, 12.1895, 4.17834 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 14.8525, 17.4779, 1.59053, 17.4779, 1.59053, 2.6084, 14.8525, 2.6084 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 17.7211, 16.8797, 0.440323, 16.8797, 0.440323, 0.00088501, 17.7211, 0.00088501 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 10, 14, 0.140823, 14, 0.140823, 0.215912, 10, 0.215912 )

[sub_resource type="TileSet" id=14]
0/name = "小镇元素.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 8, 80, 112, 72 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "小镇元素.png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 104, 24, 16, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 15 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "小镇元素.png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 72, 32, 16, 24 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 16 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "小镇元素.png 3"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 41, 33, 18, 17 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 17 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "小镇元素.png 4"
4/texture = ExtResource( 5 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 20, 36, 10, 14 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 18 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 42.0411, 53.5454, 12.3022, 53.5454, 12.3022, 8.5351, 42.0411, 8.5351 )

[sub_resource type="TileSet" id=1]
0/name = "小镇元素.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 128, 96, 48, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="main" type="Node2D"]
script = SubResource( 5 )

[node name="YSort" type="YSort" parent="."]
light_mask = 2

[node name="Player" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 160, 90 )
__meta__ = {
"_edit_group_": true
}

[node name="camera" type="Camera2D" parent="YSort"]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.5
drag_margin_top = 0.5
drag_margin_right = 0.5
drag_margin_bottom = 0.5
script = ExtResource( 12 )

[node name="真新镇" type="YSort" parent="YSort"]
script = ExtResource( 6 )

[node name="tiles" type="TileMap" parent="YSort/真新镇"]
scale = Vector2( 0.5, 0.5 )
z_index = 1
tile_set = SubResource( 14 )
cell_size = Vector2( 1, 1 )
collision_layer = 4
format = 1
tile_data = PoolIntArray( 6029695, 0, 0, 6094991, 0, 0, 8192240, 1, 0, 8650897, 2, 0, 9830548, 4, 0, 9830556, 4, 0, 9830564, 4, 0, 9830592, 4, 0, 9830600, 4, 0, 9830608, 4, 0, 9830616, 4, 0, 9830624, 4, 0, 9830632, 4, 0, 9830640, 4, 0, 14811373, 3, 0, 15007893, 4, 0, 15007901, 4, 0, 15007909, 4, 0, 15007917, 4, 0, 15007925, 4, 0, 15007933, 4, 0, 15007941, 4, 0, 15007949, 4, 0, 15007957, 4, 0, 15007965, 4, 0, 15007973, 4, 0, 15204495, 0, 0, 15204735, 0, 0 )

[node name="scence_change" parent="YSort/真新镇" instance=ExtResource( 10 )]

[node name="background" parent="YSort/真新镇" instance=ExtResource( 1 )]

[node name="tiles" type="TileMap" parent="YSort/真新镇/background"]
scale = Vector2( 0.5, 0.5 )
tile_set = SubResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( -65537, 0, 0, -131069, 0, 0, -131065, 0, 0, -131061, 0, 0, -131057, 0, 0, -131053, 0, 0, -131049, 0, 0, -131025, 0, 0, -131021, 0, 0, -131017, 0, 0, -131013, 0, 0, -131009, 0, 0, -131005, 0, 0, -131001, 0, 0, -130997, 0, 0, 131071, 0, 0, 65539, 0, 0, 65543, 0, 0, 65547, 0, 0, 65551, 0, 0, 65555, 0, 0, 65559, 0, 0, 65583, 0, 0, 65587, 0, 0, 65591, 0, 0, 65595, 0, 0, 65599, 0, 0, 65603, 0, 0, 65607, 0, 0, 65611, 0, 0, 327679, 0, 0, 262147, 0, 0, 262151, 0, 0, 262211, 0, 0, 262215, 0, 0, 262219, 0, 0, 524287, 0, 0, 458755, 0, 0, 458759, 0, 0, 458819, 0, 0, 458823, 0, 0, 458827, 0, 0, 720895, 0, 0, 655363, 0, 0, 655367, 0, 0, 655427, 0, 0, 655431, 0, 0, 655435, 0, 0, 917503, 0, 0, 851971, 0, 0, 851975, 0, 0, 852035, 0, 0, 852039, 0, 0, 852043, 0, 0, 1114111, 0, 0, 1048579, 0, 0, 1048583, 0, 0, 1048643, 0, 0, 1048647, 0, 0, 1048651, 0, 0, 1310719, 0, 0, 1245187, 0, 0, 1245191, 0, 0, 1245251, 0, 0, 1245255, 0, 0, 1245259, 0, 0, 1507327, 0, 0, 1441795, 0, 0, 1441799, 0, 0, 1441859, 0, 0, 1441863, 0, 0, 1441867, 0, 0, 1703935, 0, 0, 1638403, 0, 0, 1638407, 0, 0, 1638467, 0, 0, 1638471, 0, 0, 1638475, 0, 0, 1900543, 0, 0, 1835011, 0, 0, 1835015, 0, 0, 1835075, 0, 0, 1835079, 0, 0, 1835083, 0, 0, 2097151, 0, 0, 2031619, 0, 0, 2031623, 0, 0, 2031683, 0, 0, 2031687, 0, 0, 2031691, 0, 0, 2293759, 0, 0, 2228227, 0, 0, 2228231, 0, 0, 2228291, 0, 0, 2228295, 0, 0, 2228299, 0, 0, 2490367, 0, 0, 2424835, 0, 0, 2424839, 0, 0, 2424899, 0, 0, 2424903, 0, 0, 2424907, 0, 0, 2686975, 0, 0, 2621443, 0, 0, 2621447, 0, 0, 2621507, 0, 0, 2621511, 0, 0, 2621515, 0, 0 )

[node name="house_1" parent="YSort/真新镇" instance=ExtResource( 7 )]

[node name="in" parent="YSort/真新镇/house_1" index="0"]
visible = false

[node name="out" parent="YSort/真新镇/house_1" index="1"]
position = Vector2( 31, 18 )
z_index = 1

[node name="house_1" parent="YSort/真新镇/house_1/out" index="0" instance=ExtResource( 4 )]
position = Vector2( 69, 40 )
z_index = 1
collision_layer = 8

[node name="npc_1" parent="YSort/真新镇" instance=ExtResource( 13 )]
position = Vector2( 158, 136 )

[connection signal="player_walk_down" from="YSort/Player" to="YSort/真新镇/house_1/out/house_1" method="_on_Player_player_walk_down"]
[connection signal="player_walk_left" from="YSort/Player" to="YSort/真新镇/house_1/out/house_1" method="_on_Player_player_walk_left"]
[connection signal="player_walk_right" from="YSort/Player" to="YSort/真新镇/house_1/out/house_1" method="_on_Player_player_walk_right"]
[connection signal="player_walk_up" from="YSort/Player" to="YSort/真新镇/house_1/out/house_1" method="_on_Player_player_walk_up"]
[connection signal="zxz_house1_player_enter" from="YSort/真新镇/house_1/out/house_1" to="YSort/真新镇" method="_on_house_1_zxz_house1_player_enter"]

[editable path="YSort/真新镇/house_1"]
[editable path="YSort/真新镇/house_1/in"]
